--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -35,12 +35,12 @@ h1, h2, h3, h4 {
     height: 100%;
     text-transform: uppercase;
     font-size: 14px;
+    padding: 1em;
 }
 .aside .profile img {
     border-radius: 50%;
     display: block;
     margin: auto;
-    margin-top: 2em;
 }
 .aside ul {
     list-style-type: none;
